--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,105 @@ h3{var(--fs-h3)}
 	padding: .25em 1em;
 	margin-bottom: 1em;
 }
+.section__subtitle-work{
+	color: var(--clr-accent);
+	font-weight: var(--fw-bold);
+	margin-bottom: 1em;
+}
+
 nav{
 	display: none;
 }
+
+/*header*/
+.logo{
+	max-width: 100px;
+
+}
+.nav{
+	position: fixed;
+	background: var(--clr-dark);
+	color: var(--clr-light);
+	top: 0;
+	bottom: 0;
+	right: 0;
+	right: 0;
+	z-index: 100;
+
+	transform: translateX(100%);
+
+	transition: transform .250ms cubic-bezier(.5,0,.5,1);
+}
+.nav__list{
+	list-style: none;
+	display: flex;
+	height: 100px;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+}
+.nav__link{
+	color: inherit;
+	font-weight: var(--fw-bold);
+	font-size: var(--fs-h2);
+	text-decoration: none;
+}
+.nav__toggle{
+	padding: .25em;
+	background: transparent;
+	border-radius: 0;
+	cursor: pointer;
+	position: absolute;
+	right: 1em;
+	top: 1em;
+	z-index: 1000;
+}
+.nav__link:hover{
+	color: var(--clr-accent);
+}
+.nav__open .nav{
+	transform: translateX(0px);
+}
+.nav__open  .nav__toggle{
+	position: fixed;
+}
+.nav__open .hamburger{
+	transform: rotate(.625turn);
+}
+.nav__open .hamburger::before{
+	transform: rotate(90deg) translateX(-6px);
+}
+.nav__open .hamburger::after{
+	opacity: 0;
+}
+.hamburger{
+	display: block;
+	position: relative;
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after{
+	background: var(--clr-accent);
+	width: 2em;
+	height: 3xp;
+	border-radius: 1em;
+	transition: transform 250ms ease-in-out;
+}
+.hamburger::before,
+.hamburger::after{
+	content: '';
+	position: relative;
+	left: 0;
+	right: 0;
+}
+.hamburger::before{
+	top: 0;
+}
+.hamburger::after{bottom: 6px;}
+
+/*header*/
 .intro{
 	position: relative;
 }
@@ -140,7 +236,7 @@ nav{
 }
 .my__services{
 	background-color: var(--clr-dark);
-	background-image: url(imagen.jpg);
+	background-image: url(../img/imagen.jpg);
 	background-size: cover;
 	/*background-blend-mode: multiply;*/
 	color: var(--clr-light);
@@ -208,11 +304,73 @@ nav{
 		padding-left: 1em;
 		padding-right: calc(200px + 2em);
 	}
-	
-	}
 	.about__me-img{
 		grid-area: img;
 		position: relative;
 		z-index: 1;
 	}
+	
+}
+	
+
+
+.my__work{
+	background-color: var(--clr-dark);
+	color: var(--clr-light);
+	text-align: center;
+}
+.portfolio{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 300px);
+}
+.portfolio__item{
+	background: var(--clr-accent);
+	overflow: hidden;
+}
+.portfolio__image{
+	transition: 
+	transform 750ms cubic-bezier(.5,0,.5,1),
+	opacity 750ms linear ;
+
+}
+.portfolio__item:focus{
+	position: relative;
+	z-index: 2;
+}
+.portfolio__image:hover,
+.portfolio__item:focus .portfolio__image{
+	transform: scale(1.2);
+	opacity: .5;
+}
+.footer{
+	background: #111;
+	color: var(--clr-accent);
+	text-align: center;
+	padding: 2.5em 0;
+}
+.footer a{
+	color: inherit;
+	text-decoration: none;
+}
+.footer__link{
+	font-size: var(--fs-h3);
+	font-weight: var(--fw-bold);
+}
+.footer__link:hover,
+.social__list-link:hover{
+	opacity: .7;
+}
+.footer__link:hover{
+	text-decoration: underline;
+}
+.social__list{
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	padding: 0;
+	margin: 2em 0;
+}
+.social__list-link{
+	margin: 0 .5em;
+
 }
